--- a/Federated Learning/Model_Owner_Trainer.ipynb
+++ b/Federated Learning/Model_Owner_Trainer.ipynb
@@ -31,26 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "63Shm75skP_8"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'drive' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36720\\1510412651.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mclear_output\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mdrive\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/content/drive'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mforce_remount\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mclear_output\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'drive' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# connect to google drive\n",
-    "\n",
     "from google.colab import drive\n",
     "from IPython.display import clear_output\n",
     "drive.mount('/content/drive', force_remount=True)\n",
@@ -132,6 +119,7 @@
    },
    "outputs": [],
    "source": [
+    "# get training device\n",
     "import torch\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
@@ -159,6 +147,15 @@
     "}\n",
     "A_label2id = {v:k for k,v in A_label_map.items()}\n",
     "data_A.label = data_A.label_name.apply(lambda x: A_label2id[x] if x in A_label2id else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In future, the above process of selecting dataset would use the get_dataset function from Dataset_Splitting.ipynb"
    ]
   },
   {
@@ -219,111 +216,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 113,
-     "referenced_widgets": [
-      "8dda39051be64181aa05a2e7ad9bc159",
-      "ed6c19a1d7224abe8adbbcb83b80137d",
-      "4122f66771c7479bbc5ac521f5b0b794",
-      "69b6ade6c43d421bb188a5ad98105aec",
-      "e32cf4bc49d842deb3e3663ab1c43eb8",
-      "e4b05bd122184de68576ccb801138d2b",
-      "23594b50a5dd4e3d8f5c8a8acde8c916",
-      "81d0561b9787420d804b4939500c5ccd",
-      "8decc7626f3e48148dd08ef4b3688497",
-      "e50288d5a5bb4da7a41d1f5116f880d1",
-      "ec3e7d8376d04d49b776c20bb1bca85c",
-      "f7fb6ac42bfa48f9ba3a2fbe244ee490",
-      "55e487f4f64647f8a942a0904a2e6603",
-      "259d5dbd41284d9891be3f0b7f107e54",
-      "01f525cfa4d247d19b1f1e89ce43b71f",
-      "46caadd70cc44d3594d4dd39cce46e7a",
-      "3ee6c15bff444fc491e09c0a55f773be",
-      "fb0eb50379244a6c8ae17ad4c4cb9117",
-      "300347bac8b6461fb2cbc39f040dab3a",
-      "6e4db3c5cff141d094dd25ebed27c1e7",
-      "9748fb8b836d4084a5c1c738489925cf",
-      "dde11a8a08784d7aa461edf03fbd5705",
-      "637d054995834688bc5ad81a71395550",
-      "649ed9ce203040e58b77b29f7bc42af4",
-      "b66bf3e607e140b6b442e451ad76f2a0",
-      "e13b258418864a7aa417e5bd79b45a34",
-      "9c766f9ab0ae48758fecce0927b101bb",
-      "ea8d5ab855244225a17029921ae00e2d",
-      "bb68a4ecbddc4b878501496ac3a049e4",
-      "fc1cc60b34db4d61a40dd94f9629dffa",
-      "8879295056464d0fb2e2f61b5f2da411",
-      "f95c2c8b665340748e8df622837c862e",
-      "36e090225b02403ab54272a25af4d1ba"
-     ]
-    },
-    "id": "Ol0vDsHEzH2S",
-    "outputId": "32680c2e-021b-4055-cf9f-9946a644c2e9"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dda39051be64181aa05a2e7ad9bc159",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/160 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7fb6ac42bfa48f9ba3a2fbe244ee490",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/69.7k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "637d054995834688bc5ad81a71395550",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/346M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# download vision transformer model \n",
     "from transformers import ViTFeatureExtractor, ViTForImageClassification\n",
     "feature_extractor = ViTFeatureExtractor.from_pretrained('google/vit-base-patch16-224-in21k')\n",
     "vit_model = ViTForImageClassification.from_pretrained('google/vit-base-patch16-224', output_hidden_states=True).to(device)\n",
     "\n",
+    "# freeze the pre-trained model\n",
     "vit_model.eval()\n",
     "for param in vit_model.parameters():\n",
     "    param.requires_grad = False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "OB2e-TVTI-i7"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -379,77 +284,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "87LfR5OjJ8ix"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "0F3eMfDsKCj8"
    },
    "outputs": [],
    "source": [
+    "# initialize model, criterion and optimizer\n",
     "fc_net = nn.Sequential(\n",
     "    nn.LazyBatchNorm1d(),\n",
     "    nn.LazyLinear(128),\n",
     "    nn.GELU(),\n",
     "    nn.LazyLinear(len(A_label_map))\n",
-    ").to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Trgi8McVUagU"
-   },
-   "outputs": [],
-   "source": [
+    ").to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(fc_net.parameters(), lr=0.001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "qqUw4S1HaQSB"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8XhGVNfLVOu2",
-    "outputId": "8498d6ee-fbd8-4a80-e5e4-556dc8e83afd"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 125/125 [42:30<00:00, 20.41s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tqdm import tqdm\n",
-    "fc_net.train()\n",
-    "for batch in tqdm(A_loader):\n",
-    "    logits = fc_net(batch[0].to(device))\n",
-    "    true_labels = batch[1].long().to(device)\n",
-    "    optimizer.zero_grad()\n",
-    "    loss = criterion(logits, true_labels)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()"
    ]
   },
   {
@@ -476,6 +323,7 @@
     }
    ],
    "source": [
+    "# A simple training process for 5 epochs\n",
     "from tqdm import tqdm\n",
     "fc_net.train()\n",
     "for i in range(5):\n",
@@ -496,22 +344,11 @@
    },
    "outputs": [],
    "source": [
+    "# TODO: model evaluation\n",
     "sample_batch_A = next(iter(A_loader))\n",
     "fc_net.eval()\n",
     "with torch.no_grad():\n",
-    "    logits = fc_net(sample_batch_A[0].to(device))\n",
-    "# sum(sample_batch_A[1] == logits.argmax(1).cpu())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Jlp36QbkkopC"
-   },
-   "outputs": [],
-   "source": [
-    "parameters = list(fc_net.parameters())"
+    "    logits = fc_net(sample_batch_A[0].to(device))"
    ]
   },
   {
@@ -522,6 +359,7 @@
    },
    "outputs": [],
    "source": [
+    "# save the output model as .pt file\n",
     "torch.save(fc_net, f'{dataset_path}/saved_models/A_model_1.pt')"
    ]
   }
@@ -551,6 +389,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
