--- a/Federated Learning/Model_Owner_Trainer.ipynb
+++ b/Federated Learning/Model_Owner_Trainer.ipynb
@@ -3,16 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/keran-w/AI-Blockchain-Final-Project/blob/main/AI%20Component/Model_Owner_Trainer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "02szQePAkTcI"
    },
    "source": [
@@ -31,52 +21,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "63Shm75skP_8"
    },
    "outputs": [],
    "source": [
-    "# connect to google drive\n",
-    "from google.colab import drive\n",
+    "# Setup\n",
     "from IPython.display import clear_output\n",
-    "drive.mount('/content/drive', force_remount=True)\n",
-    "clear_output()\n",
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "aPUGAvmctEcc"
-   },
-   "outputs": [],
-   "source": [
-    "# install required packages\n",
-    "!pip install transformers\n",
-    "!pip install albumentations==0.4.6\n",
-    "clear_output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "3ooc4gTUkitB"
    },
    "outputs": [],
    "source": [
     "# define dataset path\n",
-    "dataset_path = 'drive/MyDrive/Datasets/CIFAR10'\n",
-    "img_path = 'drive/MyDrive/Datasets/CIFAR10/images'"
+    "dataset_path = '../Datasets/CIFAR10'\n",
+    "img_path = '../Datasets/CIFAR10/images'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -113,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "wO4grKzPlHSX"
    },
@@ -121,12 +93,13 @@
    "source": [
     "# get training device\n",
     "import torch\n",
+    "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "fk-q2aTXk-lD"
    },
@@ -151,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "5USqc816l85B"
    },
@@ -187,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "nsipbWrKrG9R"
    },
@@ -215,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "B_EGKW-Oscls"
    },
@@ -282,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "0F3eMfDsKCj8"
    },
@@ -301,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -314,11 +287,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 125/125 [01:23<00:00,  1.50it/s]\n",
-      "100%|██████████| 125/125 [01:21<00:00,  1.53it/s]\n",
-      "100%|██████████| 125/125 [01:21<00:00,  1.53it/s]\n",
-      "100%|██████████| 125/125 [01:21<00:00,  1.54it/s]\n",
-      "100%|██████████| 125/125 [01:21<00:00,  1.54it/s]\n"
+      "100%|██████████| 125/125 [02:30<00:00,  1.20s/it]\n",
+      "100%|██████████| 125/125 [02:30<00:00,  1.21s/it]\n",
+      "100%|██████████| 125/125 [02:27<00:00,  1.18s/it]\n",
+      "100%|██████████| 125/125 [02:38<00:00,  1.27s/it]\n",
+      "100%|██████████| 125/125 [02:30<00:00,  1.21s/it]\n"
      ]
     }
    ],
@@ -338,30 +311,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "id": "wxkUiCHKnlNR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch accuracy: 0.6875\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: model evaluation\n",
     "sample_batch_A = next(iter(A_loader))\n",
     "fc_net.eval()\n",
     "with torch.no_grad():\n",
-    "    logits = fc_net(sample_batch_A[0].to(device))"
+    "    logits = fc_net(sample_batch_A[0].to(device))\n",
+    "    y_pred = logits.argmax(1).detach().cpu().numpy()\n",
+    "    y_true = sample_batch_A[1]\n",
+    "    y_true = np.array(y_true)\n",
+    "    print('Batch accuracy:', np.mean(y_pred == y_true))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mWARNING:\u001b[0m CHANGE YOUR USERNAME AND PASSWORD!!! \n",
+      "\n",
+      "Anyone can login as an admin to your node right now because your password is still the default PySyft username and password!!!\n",
+      "\n",
+      "Connecting to localhost... done! \t Logging into server_domain... done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import base\n",
+    "uploader = base.login(\"info@openmined.org\", \"changethis\",8082)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting PyTorch tensor to numpy tensor for internal representation...\n",
+      "Converting PyTorch tensor to numpy tensor for internal representation...\n",
+      "Loading dataset...\r",
+      "Loading dataset... checking assets...\r",
+      "Loading dataset... checking dataset name for uniqueness...\r",
+      "Loading dataset... checking dataset name for uniqueness...                                                                                                                    \r",
+      "Loading dataset... checking asset types...                              \r",
+      "Loading dataset... uploading...🚀                        "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading `image_data`: 100%|\u001b[32m█████████████████████████████████████████\u001b[0m| 1/1 [00:00<00:00, 20.83it/s]\u001b[0m\n",
+      "Uploading `label`: 100%|\u001b[32m██████████████████████████████████████████████\u001b[0m| 1/1 [00:00<00:00, 62.50it/s]\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Dataset is uploaded successfully !!! 🎉\n",
+      "\n",
+      "Run `<your client variable>.datasets` to see your new dataset loaded into your machine!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import syft as sy\n",
+    "from syft.core.adp.data_subject import DataSubject\n",
+    "dataset={}\n",
+    "data_subject = DataSubject('image_data')\n",
+    "dataset['image_data'] = sy.Tensor(sample_batch_A[0]).private(min_val=0, max_val=0,data_subjects=[data_subject] * len(sample_batch_A[0]))\n",
+    "data_subject = DataSubject('label')\n",
+    "dataset['label'] = sy.Tensor(sample_batch_A[1]).private(min_val=0, max_val=0,data_subjects=[data_subject] * len(sample_batch_A[1]))\n",
+    "\n",
+    "uploader.load_dataset(\n",
+    "    assets=dataset,\n",
+    "    name=\" CIFAR10\",\n",
+    "    description=\"none\",\n",
+    "    metadata=\"none\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created successfully!\n",
+      "Connecting to localhost... done! \t Logging into server_domain... done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds_domain = sy.login(\n",
+    "    email = \"sheldon@caltech.edu\",\n",
+    "    password = \"bazinga\",\n",
+    "    port = 8082\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent=ds_domain.datasets[0]\n",
+    "asset= sent.assets\n",
+    "for i in asset:\n",
+    "    result = sent[i['name']]\n",
+    "    result.request(reason='research')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in uploader.requests:\n",
+    "    i.accept()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[  1.4194,  -8.9307,   1.1547,  ...,  11.7206,  12.0427,  -7.0161],\n",
+      "        [ -1.5749,  -7.4393,   6.1821,  ...,  -1.6212,   6.9088,   1.5066],\n",
+      "        [ -2.6264,   0.7515,   3.2751,  ...,   4.3273,   8.7533, -11.1464],\n",
+      "        ...,\n",
+      "        [ -3.0625,  -7.9869,   4.0079,  ...,   4.9463,  -1.0552,  -7.4823],\n",
+      "        [ -4.8830, -17.7617, -11.2055,  ...,  13.5408,   7.7301,  -4.0789],\n",
+      "        [ -0.8447, -11.0745,   3.1785,  ...,  -1.3299,   7.4800,  -4.7089]]) tensor([1., 2., 2., 2., 1., 0., 1., 1., 1., 1., 0., 1., 2., 1., 2., 2., 0., 1.,\n",
+      "        2., 2., 1., 2., 1., 1., 1., 1., 1., 1., 0., 2., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "result= sent['image_data']\n",
+    "x=result.get().child.child\n",
+    "x=torch.tensor(x).to(dtype=torch.float32)\n",
+    "result= sent['label']\n",
+    "y=result.get().child.child\n",
+    "y=torch.tensor(y).to(dtype=torch.float32)\n",
+    "    \n",
+    "print(x,y)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "XLmV8Fs-xRb2"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# save the output model as .pt file\n",
-    "torch.save(fc_net, f'{dataset_path}/saved_models/A_model_1.pt')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -392,7 +525,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   },
   "widgets": {
