--- a/AI Component/Simulation.ipynb
+++ b/AI Component/Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,23 +36,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a random hundreds, default: between 500 ~ 3000\n",
+    "def get_random_hundreds(low=500, high=3000):\n",
+    "    return round(random.randint(low//100, high//100)) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate data owner datasets by labels\n",
+    "def generate_data_owner_datasets(labels):\n",
+    "    label_count_info = {label:get_random_hundreds() for label in labels}\n",
+    "    return label_count_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_owner_label_info = {\n",
+    "    'A': ('trainer', 'plane, car, ship, boat, truck, other'),\n",
+    "    'B': ('trainer', 'truck, car, other'),\n",
+    "    'C': ('trainer', 'plane, truck, ship, other'),\n",
+    "    'D': ('trainer', 'ship, plane'),\n",
+    "    'E': ('trainer', 'plane, car, ship, other'),  # (overlapping dataset)\n",
+    "    'F': ('trainer', 'cat, dog, other'),  # (non existing labels)\n",
+    "    'G': ('trainer', 'truck, other'),  # (drop below baseline models)\n",
+    "    'T1': ('trainer', 'truck, car'),  # (all labels below baseline)\n",
+    "    'T2': ('trainer', 'plane, boat'),  # (one label below baseline)\n",
+    "    'T3': ('trainer', 'cat, dog'),  # (large model)\n",
+    "    'X': ('client', 'truck'),\n",
+    "    'Y': ('client', 'truck'), # (select models above baseline)\n",
+    "    'Z': ('client', 'plane, ship'), # (multiple labels)\n",
+    "    'T4': ('client', 'horse') # (non existing)\n",
+    "}\n",
+    "data_owner_label_info = {k:(v[0], v[1].split(', ')) for k,v in data_owner_label_info.items()}\n",
+    "data_owner_label_count_info = {k:{label:get_random_hundreds() for label in v[1]} for k,v in data_owner_label_info.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "{'plane': 2800,\n",
+       " 'car': 2600,\n",
+       " 'ship': 3000,\n",
+       " 'boat': 2900,\n",
+       " 'truck': 900,\n",
+       " 'Other': 1300}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Data owner A: Plane, Car, Ship, Boat, Truck, Other\n",
-    "round(random.randint(5, 20)) "
+    "# Set data owner label information\n",
+    "# Data owner A: plane, car, ship, boat, truck, other\n",
+    "data_owner_A_labels = ['plane', 'car', 'ship', 'boat', 'truck', 'other']\n",
+    "# data_owner_count_info = generate_data_owner_datasets(data_owner_A_labels)\n",
+    "\n",
+    "# # B: truck, car, other\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # C: plane, truck, ship, other\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # D: ship, plane\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # E: plane, car, ship, other (overlapping dataset)\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # F: Cat, dog, other (non existing labels)\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # G: truck, other (drop below baseline models)\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # T1: truck, car (all labels below baseline)\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # T2: plane, boat (one label below baseline)\n",
+    "# data_owner_A_labels = \n",
+    "\n",
+    "# # T3: Cat, dog (large model)\n",
+    "# data_owner_A_labels = \n",
+    "\n"
    ]
   },
   {
@@ -64,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -136,12 +220,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ab41de7c01b87720028b6e10b18ab70bba355aee4628723b15cd9ebe80125c4e"
+    "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
    }
   }
  },
