--- a/AI Component/Simulation.ipynb
+++ b/AI Component/Simulation.ipynb
@@ -2,30 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all image paths\n",
+    "# Set up\n",
     "import pandas as pd\n",
-    "dataset_path = '../Datasets/CIFAR10'\n",
-    "data_df = pd.read_csv(dataset_path + '/data.csv')\n",
-    "SEED = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import random\n",
-    "random.seed(SEED)"
+    "SEED = 20\n",
+    "random.seed(SEED)\n",
+    "\n",
+    "# Load all image paths\n",
+    "dataset_path = '../Datasets/CIFAR10'\n",
+    "data_df = pd.read_csv(dataset_path + '/data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +53,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A \t plane(1900)\tcar(2600)\tship(2800)\tboat(1200)\ttruck(2000)\tother(900)\n",
+      "B \t truck(1600)\tcar(1500)\tother(2500)\n",
+      "C \t plane(2200)\ttruck(900)\tship(2500)\tother(2800)\n",
+      "D \t ship(2700)\tplane(2800)\n",
+      "E \t plane(2600)\tcar(2600)\tship(2200)\tother(2900)\n",
+      "F \t cat(800)\tdog(2800)\tother(1300)\n",
+      "G \t truck(2500)\tother(600)\n",
+      "T1 \t truck(2100)\tcar(1100)\n",
+      "T2 \t plane(1600)\tboat(1700)\n",
+      "T3 \t cat(1100)\tdog(2200)\n",
+      "X \t truck(2100)\n",
+      "Y \t truck(2700)\n",
+      "Z \t plane(1400)\tship(2000)\n",
+      "T4 \t horse(2500)\n",
+      "All Labels: cat, boat, car, truck, horse, plane, dog, ship\n"
+     ]
+    }
+   ],
    "source": [
+    "# Set data owner label information\n",
     "data_owner_label_info = {\n",
     "    'A': ('trainer', 'plane, car, ship, boat, truck, other'),\n",
     "    'B': ('trainer', 'truck, car, other'),\n",
@@ -80,63 +97,14 @@
     "    'T4': ('client', 'horse') # (non existing)\n",
     "}\n",
     "data_owner_label_info = {k:(v[0], v[1].split(', ')) for k,v in data_owner_label_info.items()}\n",
-    "data_owner_label_count_info = {k:{label:get_random_hundreds() for label in v[1]} for k,v in data_owner_label_info.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'plane': 2800,\n",
-       " 'car': 2600,\n",
-       " 'ship': 3000,\n",
-       " 'boat': 2900,\n",
-       " 'truck': 900,\n",
-       " 'Other': 1300}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Set data owner label information\n",
-    "# Data owner A: plane, car, ship, boat, truck, other\n",
-    "data_owner_A_labels = ['plane', 'car', 'ship', 'boat', 'truck', 'other']\n",
-    "# data_owner_count_info = generate_data_owner_datasets(data_owner_A_labels)\n",
+    "data_owner_label_count_info = {k:{label:get_random_hundreds() for label in v[1]} for k,v in data_owner_label_info.items()}\n",
+    "all_labels = set()\n",
+    "for k,v in data_owner_label_count_info.items():\n",
+    "    all_labels.update(list(v.keys()))\n",
+    "    print(k, '\\t', '\\t'.join([f'{i[0]}({i[1]})' for i in v.items()]))\n",
     "\n",
-    "# # B: truck, car, other\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # C: plane, truck, ship, other\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # D: ship, plane\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # E: plane, car, ship, other (overlapping dataset)\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # F: Cat, dog, other (non existing labels)\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # G: truck, other (drop below baseline models)\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # T1: truck, car (all labels below baseline)\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # T2: plane, boat (one label below baseline)\n",
-    "# data_owner_A_labels = \n",
-    "\n",
-    "# # T3: Cat, dog (large model)\n",
-    "# data_owner_A_labels = \n",
-    "\n"
+    "all_labels.remove('other')\n",
+    "print('All Labels:', ', '.join(list(all_labels)))"
    ]
   },
   {
@@ -148,60 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \n",
-    "# get_dataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_dataset = 20%\n",
-    "# private_dataset = 80%\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dataset Partition and Simulation\n",
-    "# Test Dataset: 20%\n",
-    "# Training baseline model\n",
-    "# Model evaluation\n",
-    "# Private Dataset: 80%\n",
-    "# Number per class: random hundreds between 500~3000\n",
-    "# Data Owners (10)\n",
-    "# A: Plane, Car, Ship, Boat, Truck, Other\n",
-    "# B: Truck, Car, Other\n",
-    "# C: Plane, Truck, Ship, Other\n",
-    "# D: Ship, Plane\n",
-    "# E: Plane, Car, Ship, Other (overlapping dataset)\n",
-    "# F: Cat, Dog, Other (non existing labels)\n",
-    "# G: Truck, Other (drop below baseline models)\n",
-    "# T1: Truck, Car (all labels below baseline)\n",
-    "# T2: Plane, Boat (one label below baseline)\n",
-    "# T3: Cat, Dog (large model)\n",
-    "# Clients (4)\n",
-    "# X: Truck\n",
-    "# Y: Truck (select models above baseline)\n",
-    "# Z: Plane, Ship (multiple labels)\n",
-    "# T4: Horse (non existing)\n"
-   ]
   }
  ],
  "metadata": {
