--- a/AI Component/Simulation.ipynb
+++ b/AI Component/Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset Partition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,28 +60,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A \t plane(1900)\tcar(2600)\tship(2800)\tboat(1200)\ttruck(2000)\tother(900)\n",
-      "B \t truck(1600)\tcar(1500)\tother(2500)\n",
-      "C \t plane(2200)\ttruck(900)\tship(2500)\tother(2800)\n",
-      "D \t ship(2700)\tplane(2800)\n",
-      "E \t plane(2600)\tcar(2600)\tship(2200)\tother(2900)\n",
-      "F \t cat(800)\tdog(2800)\tother(1300)\n",
-      "G \t truck(2500)\tother(600)\n",
-      "T1 \t truck(2100)\tcar(1100)\n",
-      "T2 \t plane(1600)\tboat(1700)\n",
-      "T3 \t cat(1100)\tdog(2200)\n",
-      "X \t truck(2100)\n",
-      "Y \t truck(2700)\n",
-      "Z \t plane(1400)\tship(2000)\n",
-      "T4 \t horse(2500)\n",
-      "All Labels: cat, boat, car, truck, horse, plane, dog, ship\n"
+      "A \t plane(2800)\tcar(2600)\tship(3000)\tboat(2900)\ttruck(900)\tother(1300)\n",
+      "B \t truck(2600)\tcar(2500)\tother(800)\n",
+      "C \t plane(1500)\ttruck(2300)\tship(1000)\tother(500)\n",
+      "D \t ship(1800)\tplane(1800)\n",
+      "E \t plane(700)\tcar(800)\tship(900)\tother(1500)\n",
+      "F \t cat(2000)\tdog(2300)\tother(1900)\n",
+      "G \t truck(1800)\tother(1100)\n",
+      "T1 \t truck(1100)\tcar(1500)\n",
+      "T2 \t plane(2500)\tboat(2600)\n",
+      "T3 \t cat(1500)\tdog(1500)\n",
+      "X \t truck(1800)\n",
+      "Y \t truck(700)\n",
+      "Z \t plane(2500)\tship(2100)\n",
+      "T4 \t horse(3000)\n",
+      "All Labels: car, plane, cat, horse, truck, dog, ship, boat\n"
      ]
     }
    ],
@@ -105,6 +112,261 @@
     "\n",
     "all_labels.remove('other')\n",
     "print('All Labels:', ', '.join(list(all_labels)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a list with the given length\n",
+    "def generate_list_by_sum(m, n):\n",
+    "    arr = [0] * m;\n",
+    "    for i in range(n):\n",
+    "        arr[random.randint(0, m-1)] += 1\n",
+    "    return arr\n",
+    "\n",
+    "# update the count for other labels\n",
+    "data_owner_label_count_full_info = {}\n",
+    "for k, v in data_owner_label_count_info.items():\n",
+    "    other_labels = all_labels.difference(set(v.keys()))\n",
+    "    data_owner_label_count_full_info[k] = v\n",
+    "    if 'other' in v:\n",
+    "        total_other_labels = v['other']\n",
+    "        del data_owner_label_count_full_info[k]['other']\n",
+    "        for label, count in zip(other_labels, generate_list_by_sum(len(other_labels), total_other_labels)):\n",
+    "            data_owner_label_count_full_info[k][label] = f'{count}*'\n",
+    "    \n",
+    "    # Set count of extra labels to 0\n",
+    "    extra_labels = all_labels.difference(set(data_owner_label_count_full_info[k].keys()))\n",
+    "    for label in extra_labels:\n",
+    "        data_owner_label_count_full_info[k][label] = '0*'\n",
+    "    for label in v.keys():\n",
+    "        data_owner_label_count_full_info[k][label] = f'{data_owner_label_count_full_info[k][label]}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>plane</th>\n",
+       "      <th>car</th>\n",
+       "      <th>ship</th>\n",
+       "      <th>boat</th>\n",
+       "      <th>truck</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>horse</th>\n",
+       "      <th>cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2800</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2900</td>\n",
+       "      <td>900</td>\n",
+       "      <td>466*</td>\n",
+       "      <td>398*</td>\n",
+       "      <td>436*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>139*</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>127*</td>\n",
+       "      <td>138*</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>132*</td>\n",
+       "      <td>127*</td>\n",
+       "      <td>137*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>1500</td>\n",
+       "      <td>110*</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>84*</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>96*</td>\n",
+       "      <td>107*</td>\n",
+       "      <td>103*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>1800</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>700</td>\n",
+       "      <td>800</td>\n",
+       "      <td>900</td>\n",
+       "      <td>287*</td>\n",
+       "      <td>291*</td>\n",
+       "      <td>318*</td>\n",
+       "      <td>274*</td>\n",
+       "      <td>330*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>341*</td>\n",
+       "      <td>307*</td>\n",
+       "      <td>327*</td>\n",
+       "      <td>315*</td>\n",
+       "      <td>296*</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>314*</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>136*</td>\n",
+       "      <td>149*</td>\n",
+       "      <td>184*</td>\n",
+       "      <td>157*</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>165*</td>\n",
+       "      <td>149*</td>\n",
+       "      <td>160*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T1</th>\n",
+       "      <td>0*</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T2</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T3</th>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>X</th>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Z</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T4</th>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>0*</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0*</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   plane   car  ship  boat truck   dog horse   cat\n",
+       "A   2800  2600  3000  2900   900  466*  398*  436*\n",
+       "B   139*  2500  127*  138*  2600  132*  127*  137*\n",
+       "C   1500  110*  1000   84*  2300   96*  107*  103*\n",
+       "D   1800    0*  1800    0*    0*    0*    0*    0*\n",
+       "E    700   800   900  287*  291*  318*  274*  330*\n",
+       "F   341*  307*  327*  315*  296*  2300  314*  2000\n",
+       "G   136*  149*  184*  157*  1800  165*  149*  160*\n",
+       "T1    0*  1500    0*    0*  1100    0*    0*    0*\n",
+       "T2  2500    0*    0*  2600    0*    0*    0*    0*\n",
+       "T3    0*    0*    0*    0*    0*  1500    0*  1500\n",
+       "X     0*    0*    0*    0*  1800    0*    0*    0*\n",
+       "Y     0*    0*    0*    0*   700    0*    0*    0*\n",
+       "Z   2500    0*  2100    0*    0*    0*    0*    0*\n",
+       "T4    0*    0*    0*    0*    0*    0*  3000    0*"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_owner_info_df = pd.DataFrame(data_owner_label_count_full_info).T\n",
+    "data_owner_info_df"
    ]
   },
   {
