--- a/Federated Learning/Model_Owner_Trainer.ipynb
+++ b/Federated Learning/Model_Owner_Trainer.ipynb
@@ -484,9 +484,30 @@
     "x=torch.tensor(x).to(dtype=torch.float32)\n",
     "result= sent['label']\n",
     "y=result.get().child.child\n",
-    "y=torch.tensor(y).to(dtype=torch.float32)\n",
-    "    \n",
-    "print(x,y)\n"
+    "y=torch.tensor(y).to(dtype=torch.float32)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch accuracy: 0.6875\n"
+     ]
+    }
+   ],
+   "source": [
+    "fc_net.eval()\n",
+    "with torch.no_grad():\n",
+    "    logits = fc_net(x.to(device))\n",
+    "    y_pred = logits.argmax(1).detach().cpu().numpy()\n",
+    "    y_true = y\n",
+    "    y_true = np.array(y_true)\n",
+    "    print('Batch accuracy:', np.mean(y_pred == y_true))"
    ]
   },
   {
