--- a/AI Component/Train_Method_1.ipynb
+++ b/AI Component/Train_Method_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm.autonotebook import tqdm\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,169 +184,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d7e687a81674904825c830f6915896b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [11:59<00:00,  1.70s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1.2761881440454186 [tensor(6747, device='cuda:0'), 13500]\n"
+      "[  0:10 ]\tloss=0.350,         acc=11792/13500=0.873\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac0f0beaab964aac9d45a18747131547",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:50<00:00,  1.54s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1.1783721616482847 [tensor(7404, device='cuda:0'), 13500]\n"
+      "[  1:10 ]\tloss=0.286,         acc=12097/13500=0.896\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44af60f7cd1a42e590b8bb40784e544e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:41<00:00,  1.52s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 1.1486803274866528 [tensor(7557, device='cuda:0'), 13500]\n"
+      "[  2:10 ]\tloss=0.260,         acc=12224/13500=0.905\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "110cfbe31a814635885d821f17075573",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:33<00:00,  1.50s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 1.1271912181546904 [tensor(7712, device='cuda:0'), 13500]\n"
+      "[  3:10 ]\tloss=0.252,         acc=12286/13500=0.910\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b428a83d60e4459887ae2b2f450cb7a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:34<00:00,  1.50s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 1.1119315944859203 [tensor(7774, device='cuda:0'), 13500]\n"
+      "[  4:10 ]\tloss=0.244,         acc=12296/13500=0.911\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7378bc43023c4c9b878db67b0b4ff50d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:34<00:00,  1.50s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 1.0891381286049342 [tensor(7804, device='cuda:0'), 13500]\n"
+      "[  5:10 ]\tloss=0.231,         acc=12343/13500=0.914\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dffc0952d9f14dd8a14968ab5776a56f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [11:22<00:00,  1.62s/it]\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 1.074612484300306 [tensor(7908, device='cuda:0'), 13500]\n"
+      "[  6:10 ]\tloss=0.223,         acc=12443/13500=0.922\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26c5e6b5f2de42e483cbf03aff84ed7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [11:54<00:00,  1.69s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  7:10 ]\tloss=0.218,         acc=12446/13500=0.922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 284/422 [07:15<03:38,  1.58s/it]"
+     ]
     }
    ],
    "source": [
@@ -361,13 +319,13 @@
     "        loss = criterion(logits, batch_labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        \n",
+    "\n",
     "        epoch_loss_list.append(loss.item())\n",
     "        epoch_acc_sum[0] += (logits.argmax(1) == batch_labels).sum().item()\n",
     "        epoch_acc_sum[1] += len(batch_labels)\n",
-    "    \n",
-    "        print(f'[ {epoch:2d}:{num_epochs} ]\\tloss={np.mean(epoch_loss_list):.3f}, \\\n",
-    "          acc={epoch_acc_sum[0]}/{epoch_acc_sum[1]}={epoch_acc_sum[0]/epoch_acc_sum[1]:.3f}')"
+    "\n",
+    "    print(f'[ {epoch:2d}:{num_epochs} ]\\tloss={np.mean(epoch_loss_list):.3f}, \\\n",
+    "        acc={epoch_acc_sum[0]}/{epoch_acc_sum[1]}={epoch_acc_sum[0]/epoch_acc_sum[1]:.3f}')\n"
    ]
   },
   {
@@ -375,12 +333,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(model, '../saved_models/model_A_1.pt')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +359,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
+    "hash": "511e198c7044f4fa1c9fb6786af37bc0803f028a2364c2b1dc987f96133f7904"
    }
   }
  },
